--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "magento-set/magento2-patches-tool",
   "description": "Magento 2 patches",
   "type":"composer-plugin",
+  "version": "100.0.0",
   "license": [
     "OSL-3.0",
     "AFL-3.0"
